--- a/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatística_Parte_1.ipynb
@@ -189,29 +189,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "8QgOpE-wjQKl"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ufRZ7TLwjQKo"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dados = pd.read_csv('dados.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -222,8 +226,27 @@
     "outputId": "5eef662c-f904-4e46-ee7a-159616d06554",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+       "0  11     0     23    8              12    800  1.603808\n",
+       "1  11     1     23    2              12   1150  1.739790\n",
+       "2  11     1     35    8              15    880  1.760444\n",
+       "3  11     0     46    2               6   3500  1.783158\n",
+       "4  11     1     47    8               9    150  1.690631"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UF</th>\n      <th>Sexo</th>\n      <th>Idade</th>\n      <th>Cor</th>\n      <th>Anos de Estudo</th>\n      <th>Renda</th>\n      <th>Altura</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11</td>\n      <td>0</td>\n      <td>23</td>\n      <td>8</td>\n      <td>12</td>\n      <td>800</td>\n      <td>1.603808</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11</td>\n      <td>1</td>\n      <td>23</td>\n      <td>2</td>\n      <td>12</td>\n      <td>1150</td>\n      <td>1.739790</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>11</td>\n      <td>1</td>\n      <td>35</td>\n      <td>8</td>\n      <td>15</td>\n      <td>880</td>\n      <td>1.760444</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>0</td>\n      <td>46</td>\n      <td>2</td>\n      <td>6</td>\n      <td>3500</td>\n      <td>1.783158</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>47</td>\n      <td>8</td>\n      <td>9</td>\n      <td>150</td>\n      <td>1.690631</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "dados.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -260,8 +283,21 @@
     "id": "NtQZNGNbjQKt",
     "outputId": "f75cd222-87e0-487c-b3cd-641c701dd6b1"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "sorted(dados['Anos de Estudo'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -288,12 +324,51 @@
     "outputId": "9b36ef0c-fa30-47cd-a568-6334b2330fd7",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[11,\n",
+       " 12,\n",
+       " 13,\n",
+       " 14,\n",
+       " 15,\n",
+       " 16,\n",
+       " 17,\n",
+       " 21,\n",
+       " 22,\n",
+       " 23,\n",
+       " 24,\n",
+       " 25,\n",
+       " 26,\n",
+       " 27,\n",
+       " 28,\n",
+       " 29,\n",
+       " 31,\n",
+       " 32,\n",
+       " 33,\n",
+       " 35,\n",
+       " 41,\n",
+       " 42,\n",
+       " 43,\n",
+       " 50,\n",
+       " 51,\n",
+       " 52,\n",
+       " 53]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "sorted(dados['UF'].unique())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -303,12 +378,25 @@
     "id": "NURfft2QjQKy",
     "outputId": "8dd13533-8135-4234-e3ff-44f72b8fa535"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "sorted(dados['Sexo'].unique())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -318,8 +406,21 @@
     "id": "6VwGyqxMjQK1",
     "outputId": "6f0a238e-e94a-4691-eff8-239e64db9913"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "sorted(dados['Cor'].unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -345,8 +446,18 @@
     "id": "sr4JXeZkjQK5",
     "outputId": "eea4cb2d-c154-4ad1-b03f-7f5cdf06a285"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "De 13 ate anos 99\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'De {dados.Idade.min()} ate anos {dados.Idade.max()}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2564,7 +2675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
