distribuição de frequência

--- a/Curso_de_Estatística_Parte_1.ipynb
+++ b/Curso_de_Estatística_Parte_1.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -241,7 +241,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UF</th>\n      <th>Sexo</th>\n      <th>Idade</th>\n      <th>Cor</th>\n      <th>Anos de Estudo</th>\n      <th>Renda</th>\n      <th>Altura</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>11</td>\n      <td>0</td>\n      <td>23</td>\n      <td>8</td>\n      <td>12</td>\n      <td>800</td>\n      <td>1.603808</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>11</td>\n      <td>1</td>\n      <td>23</td>\n      <td>2</td>\n      <td>12</td>\n      <td>1150</td>\n      <td>1.739790</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>11</td>\n      <td>1</td>\n      <td>35</td>\n      <td>8</td>\n      <td>15</td>\n      <td>880</td>\n      <td>1.760444</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11</td>\n      <td>0</td>\n      <td>46</td>\n      <td>2</td>\n      <td>6</td>\n      <td>3500</td>\n      <td>1.783158</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>11</td>\n      <td>1</td>\n      <td>47</td>\n      <td>8</td>\n      <td>9</td>\n      <td>150</td>\n      <td>1.690631</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 3
     }
    ],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -292,7 +292,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 4
     }
    ],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -359,7 +359,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 5
     }
    ],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -387,7 +387,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 6
     }
    ],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -415,7 +415,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 7
     }
    ],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -451,12 +451,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "De 13 ate anos 99\n"
+      "De 13 ate 99 anos \n"
      ]
     }
    ],
    "source": [
-    "print(f'De {dados.Idade.min()} ate anos {dados.Idade.max()}')"
+    "print(f'De {dados.Idade.min()} ate {dados.Idade.max()} anos ')"
    ]
   },
   {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -498,8 +498,18 @@
     "id": "jOW-bGyRjQK8",
     "outputId": "f3667c96-a570-4f95-818e-4bcc9cbe9403"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "De 1.339244614 ate 2.028496765 metros \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'De {dados.Altura.min()} ate {dados.Altura.max()} metros ')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -558,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -568,12 +578,27 @@
     "id": "cA4gUboZjQLB",
     "outputId": "960bc58d-62e2-4ca2-bb6d-df888813cb34"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    53250\n",
+       "1    23590\n",
+       "Name: Sexo, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "dados['Sexo'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -583,45 +608,66 @@
     "id": "iy4-ijknjQLD",
     "outputId": "609cb9bf-45b6-4d6a-ab57-f7eee496a41b"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    69.299844\n",
+       "1    30.700156\n",
+       "Name: Sexo, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "dados['Sexo'].value_counts(normalize= True)*100 # Passando para porcentagem"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "qfkiLcFijQLG"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "frequencia = dados['Sexo'].value_counts()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "t4uFMt6fjQLI"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "percentual = dados['Sexo'].value_counts(normalize= True)*100"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zUGfju86jQLM"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dist_freq_qualitativas = pd.DataFrame({'Frequencia':frequencia,'Porcentagem (%)':percentual})"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -631,23 +677,42 @@
     "id": "kPOYfijijQLO",
     "outputId": "4af843fe-2772-4fc7-a04c-6e50d2384b58"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   Frequencia  Porcentagem (%)\n",
+       "0       53250        69.299844\n",
+       "1       23590        30.700156"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Frequencia</th>\n      <th>Porcentagem (%)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>53250</td>\n      <td>69.299844</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>23590</td>\n      <td>30.700156</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "dist_freq_qualitativas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "tMS-VSk3jQLQ"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dist_freq_qualitativas.rename(index={0:'Masculino',1:'Feminino'},inplace= True)\n",
+    "dist_freq_qualitativas.rename_axis('Sexo', axis='columns',inplace=True)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -657,8 +722,24 @@
     "id": "B9zkYdcCyHe6",
     "outputId": "870e3f1e-498f-47f2-f9c7-30f748d0870a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Sexo       Frequencia  Porcentagem (%)\n",
+       "Masculino       53250        69.299844\n",
+       "Feminino        23590        30.700156"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Sexo</th>\n      <th>Frequencia</th>\n      <th>Porcentagem (%)</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Masculino</th>\n      <td>53250</td>\n      <td>69.299844</td>\n    </tr>\n    <tr>\n      <th>Feminino</th>\n      <td>23590</td>\n      <td>30.700156</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "dist_freq_qualitativas "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -682,18 +763,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "d8XMZiEfjQLS"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sexo = {0: 'Masculino',\n",
+    "        1: 'Feminino'}\n",
+    "\n",
+    "cor = {0: 'Indígena',\n",
+    "        2: 'Branca',\n",
+    "        4: 'Preta',\n",
+    "        6: 'Amarela',\n",
+    "        8: 'Parda',\n",
+    "        9: 'Sem declaração'}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -703,8 +794,26 @@
     "id": "YLCyOKYcjQLU",
     "outputId": "7edebb2b-4a25-4b77-f78a-f47adbc8b3d9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Cor     0      2     4    6      8\n",
+       "Sexo                              \n",
+       "0     256  22194  5502  235  25063\n",
+       "1     101   9621  2889  117  10862"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Cor</th>\n      <th>0</th>\n      <th>2</th>\n      <th>4</th>\n      <th>6</th>\n      <th>8</th>\n    </tr>\n    <tr>\n      <th>Sexo</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>256</td>\n      <td>22194</td>\n      <td>5502</td>\n      <td>235</td>\n      <td>25063</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>101</td>\n      <td>9621</td>\n      <td>2889</td>\n      <td>117</td>\n      <td>10862</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "frequencia = pd.crosstab(dados.Sexo, dados.Cor)  # juntando dados de 2 columas do dataFrame\n",
+    "frequencia"
+   ]
   },
   {
    "cell_type": "code",
